Changing data type for location param